--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,158 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
   margin: 0;
+  padding: 0;
+  background-color: #f9f9f9;
+}
+
+.content {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+nav {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  height: 95px;
+  width: 100%;
+  align-items: center;
+  padding: 0 30px;
+  background-color: #EFEFEF;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.logo {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  text-decoration: none;
+  margin-right: 20px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+.navigation {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  /* Space between navigation items */
+  margin: 0;
+  padding: 0;
+
+}
+
+.navigation a {
+  text-decoration: none;
+  color: #333;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.navigation .active {
+  color: black;
+  font-weight: bold;
+}
+
+.title {
+  text-align: center;
+  font-size: 2.5em;
+  margin: 0;
+  padding: 20px 0px;
+  color: #333;
+  background-color: #f7dddd;
+
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+
+}
+
+/* Mobile */
+.book-list {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
+}
+
+.book-item {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.book-item img {
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.book-image {
+  max-width: 600px;
+  height: auto;
+  border-radius: 4px;
+  object-fit: contain;
+}
+
+.book-info-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+}
+
+.quotes-list {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 50px;
+}
+
+blockquote {
+  border-left: 4px solid #ddd;
+  padding-left: 16px;
+  margin: 12px 0;
+  color: #555;
+}
+
+blockquote p {
+  margin: 0;
+}
+
+blockquote footer {
+  text-align: right;
+  font-size: 0.9em;
+  color: #999;
+}
+
+/* Media Queries tablet and laptop */
+@media (min-width: 768px) {
+  .book-info-grid {
+    grid-template-columns: 1fr 1fr;
   }
-  a:hover {
-    color: #747bff;
+
+  .quotes-list {
+    grid-template-columns: 1fr 1fr;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .book-list {
+    grid-template-columns: repeat(4, 1fr);
+
+  }
+
+}
+
+@media (min-width: 1200px) {
+  .quotes-list {
+    max-width: 1200px;
+  }
+
+  .book-list {
+    grid-template-columns: repeat(6, 1fr);
   }
 }
